Translations update // WIP

--- a/backend/src/Squidex/wwwroot/assets/i18n/strings.json
+++ b/backend/src/Squidex/wwwroot/assets/i18n/strings.json
@@ -11,7 +11,7 @@
 	"All tags": "Todas las etiquetas",
 	"Apps Overview": "Aplicaciones",
 	"Assets": "Archivos",
-	"Assets reloaded": "Archivos recargados",
+	"Assets reloaded": "Archivos actualizados",
 	"Autotranslate from master language": "Autotranslate from master language",
 	"Back to previous page": "Regresar",
 	"Best for multiple instances": "Best for multiple instances",
@@ -80,7 +80,7 @@
 	"Profile": "Perfil",
 	"Protected": "Protegido",
 	"Quick Nav (Press 'q')": "Navegación rápida (Presione 'q')",
-	"Refresh": "Refrescar",
+	"Refresh": "Actualizar",
 	"Rename": "Cambiar nombre",
 	"Rename Folder": "Cambiar nombre de carpeta",
 	"Reset": "Deshacer",
